Changes to my post
Added a missing slave machine; updated my port numbers

--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
 
         function sendToDanielsCluster(result){
                 console.log(result)
-                $.post("http://helena.cs.colostate.edu:47309",result)
-                $.post("http://hartford.cs.colostate.edu:47309",result)
-                $.post("http://providence.cs.colostate.edu:47309",result)
-                $.post("http://juneau.cs.colostate.edu:47309",result)
-                $.post("http://concord.cs.colostate.edu:47309",result)
-                $.post("http://charleston.cs.colostate.edu:47309",result)
-                $.post("http://boise.cs.colostate.edu:47309",result)
-                $.post("http://bismarck.cs.colostate.edu:47309",result)
-                $.post("http://topeka.cs.colostate.edu:47309",result)
-                $.post("http://dover.cs.colostate.edu:47309",result)
-                $.post("http://carson-city.cs.colostate.edu:47309",result)
-
+                $.post("http://helena.cs.colostate.edu:47339",result)
+                $.post("http://hartford.cs.colostate.edu:47339",result)
+                $.post("http://providence.cs.colostate.edu:47339",result)
+                $.post("http://juneau.cs.colostate.edu:47339",result)
+                $.post("http://concord.cs.colostate.edu:47339",result)
+                $.post("http://charleston.cs.colostate.edu:47339",result)
+                $.post("http://boise.cs.colostate.edu:47339",result)
+                $.post("http://bismarck.cs.colostate.edu:47339",result)
+                $.post("http://topeka.cs.colostate.edu:47339",result)
+                $.post("http://dover.cs.colostate.edu:47339",result)
+                $.post("http://carson-city.cs.colostate.edu:47339",result)
+                $.post("http://sacramento.cs.colostate.edu:47339",result)
         }
     
     
