--- a/index.html
+++ b/index.html
@@ -2,6 +2,52 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="./test.css"/>
+
+         <style>
+            html, body, #map-canvas {
+                height: 100%;
+                width: 100%;
+                margin: 0px;
+                padding: 0px
+            }
+        </style>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization"></script>
+        <script>
+            var map, pointarray, heatmap;
+ 
+
+            var points = [];
+            points.push(new google.maps.LatLng(37.782551, -122.445368));
+            points.push(new google.maps.LatLng(37.782551, -122.984322));
+            points.push(new google.maps.LatLng(37.782551, -122.445368));
+ 
+ 
+            function initialize() {
+             // the map's options
+                var mapOptions = {
+                    zoom: 13,
+                    center: new google.maps.LatLng(37.774546, -122.433523),
+                    mapTypeId: google.maps.MapTypeId.SATELLITE
+                };
+ 
+                map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+ 
+                var pointArray = new google.maps.MVCArray(points);
+ 
+            // what data for the heatmap and how to display it
+                heatmap = new google.maps.visualization.HeatmapLayer({
+                    data: pointArray,
+                    radius: 50
+                });
+ 
+            // placing the heatmap on the map
+                heatmap.setMap(map);
+            }
+ 
+            // as soon as the document is ready the map is initialized
+            google.maps.event.addDomListener(window, 'load', initialize);
+ 
+    </script>
     </head>
     <body>
 
@@ -24,6 +70,7 @@
                 <p>Upload your search history and map activity and watch as spark will pick out every place Google thinks you've ever been</p>
                 <input name="myFile1" type="file" id="f1">
                 <input name="myFile2" type="file" id="f2">
+                <div id="map-canvas"></div>
             </div>
         </div>
 
@@ -42,13 +89,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script>
-
         //function progress(percent, $element) {
         //        var progressBarWidth = percent * $element.width() / 100;
         //        $element.find('div').animate({ width: progressBarWidth }, 500).html(percent + "% ");
         //}
-
-
         function sendToDanielsCluster(result){
                 console.log(result)
                 $.post("http://helena.cs.colostate.edu:47339",result)
@@ -85,7 +129,6 @@
             if (!this.files.length) return;
             readFileByChunk(this.files[0], true,function(result){
                 result += "\r\n"
-
                 $.post("http://olympia.cs.colostate.edu:45409",result)
                 $.post("http://boise.cs.colostate.edu:45409",result)
                 $.post("http://albany.cs.colostate.edu:45409",result)
@@ -103,7 +146,6 @@
                 $.post("http://salt-lake-city.cs.colostate.edu:45409",result)
             });
         };
-
 function readFileByChunk(file, subjectsOnly, callback){
     var CHUNK_SIZE = 1000000;
     var offset = 0;
@@ -131,9 +173,7 @@ function readFileByChunk(file, subjectsOnly, callback){
     fr.onerror = function() {
         callback("ERROR")
     };
-
     seek();
-
     function seek() {
         if (offset >= file.size) {
             console.log("DONE")
@@ -143,6 +183,5 @@ function readFileByChunk(file, subjectsOnly, callback){
         fr.readAsText(slice);
     }
 }
-
     </script>
 </html>
